Updating to latest ios settings, fixing broken css on mobile on login page

--- a/client/main.css
+++ b/client/main.css
@@ -254,3 +254,8 @@ div.md-editor>textarea {
   position: relative;
   padding-left: 25px;
 }
+
+/* Overrides separator between login inputs */
+.table > tbody > tr > td {
+  border-top: none !important;
+}
